# use-truapi

./: .gitignore  README.md  ROADMAP.md  biome.json  nx.json  package.json  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml  release.yml
apps/docs/: .gitignore  next.config.mjs  package.json  typedoc.react.json  typedoc.vue.json
apps/docs/app/: layout.tsx  page.tsx
apps/docs/app/(home)/: page.tsx
apps/docs/content/docs/: ai.mdx  getting-started.mdx  index.mdx  meta.json  provider.mdx
apps/docs/lib/: layout.shared.tsx  shared.ts
apps/docs/scripts/: generate-api.mjs
apps/example-react/: index.html  package.json  tsconfig.json  vite.config.ts
apps/example-react/src/: App.tsx  config.ts  counter-contract.ts  main.tsx  styles.css  ui.ts  ui.tsx
apps/example-react/src/panels/: AccountsPanel.tsx  ChainPanel.tsx  ChatPanel.tsx  ContractPanel.tsx  HeaderBar.tsx  HostPanel.tsx  PaymentsPanel.tsx  StatementsPanel.tsx  StoragePanel.tsx  (+1 more)
apps/example-vue/: index.html  package.json  tsconfig.json  vite.config.ts
apps/example-vue/src/: App.vue  config.ts  counter-contract.ts  main.ts  style.css  ui.ts
contracts/: Cargo.toml  cdm.json
contracts/.cdm/contracts/@use-truapi/counter/1/: abi.json  info.json  metadata.json
contracts/.cdm/solidity/use-truapi/: counter.sol
contracts/counter/: Cargo.toml  lib.rs
e2e/: package.json  playwright.config.ts
e2e/tests/: host.spec.ts
skills/use-truapi/: SKILL.md
skills/use-truapi/references/: accounts-tx.md  chain.md  chat-statements.md  contracts.md  host.md  payments-storage.md
(+75 files in other folders)
